objects/PIT_SCH__Line_of_Equipment__c.object
<CustomObject>
    <fields>
        <fullName>MigrationID__c</fullName>
        <externalId>true</externalId>
        <label>MigrationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>PIT_SCH__Company__c</referenceTo>
        <relationshipName>Lines_of_Equipments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__ExternalID__c</fullName>
        <label>ExternalID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Local_Name__c</fullName>
        <label>Local Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Long_Name__c</fullName>
        <label>Long Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__MigrationID__c</fullName>
        <externalId>true</externalId>
        <label>MigrationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Pitcher Product Line</label>
    <listViews>
        <fullName>All_Product_Line_AUD</fullName>
        <columns>NAME</columns>
        <columns>PIT_SCH__Active__c</columns>
        <columns>PIT_SCH__ExternalID__c</columns>
        <columns>PIT_SCH__Company__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>PIT_SCH__Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PIT_SCH__Market__c</field>
            <operation>equals</operation>
            <value>AUD</value>
        </filters>
        <label>All Product Line_AUD</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Product_Line_MY</fullName>
        <columns>NAME</columns>
        <columns>PIT_SCH__Active__c</columns>
        <columns>PIT_SCH__ExternalID__c</columns>
        <columns>PIT_SCH__Company__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>PIT_SCH__Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PIT_SCH__Market__c</field>
            <operation>equals</operation>
            <value>MY</value>
        </filters>
        <label>All Product Line_MY</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Product_Line_RU</fullName>
        <columns>NAME</columns>
        <columns>PIT_SCH__Active__c</columns>
        <columns>PIT_SCH__ExternalID__c</columns>
        <columns>PIT_SCH__Company__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>PIT_SCH__Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PIT_SCH__Market__c</field>
            <operation>equals</operation>
            <value>turkey</value>
        </filters>
        <label>All Product Line_TK</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Product_Line_TH</fullName>
        <columns>NAME</columns>
        <columns>PIT_SCH__Active__c</columns>
        <columns>PIT_SCH__ExternalID__c</columns>
        <columns>PIT_SCH__Company__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>PIT_SCH__Market__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PIT_SCH__Market__c</field>
            <operation>equals</operation>
            <value>NZ</value>
        </filters>
        <label>All Product Line_NZ</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Product_Line_TH1</fullName>
        <columns>NAME</columns>
        <columns>PIT_SCH__Active__c</columns>
        <columns>PIT_SCH__ExternalID__c</columns>
        <columns>PIT_SCH__Company__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>PIT_SCH__Market__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PIT_SCH__Market__c</field>
            <operation>equals</operation>
            <value>TH</value>
        </filters>
        <label>All Product Line_TH</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Product_Line_UK</fullName>
        <columns>NAME</columns>
        <columns>PIT_SCH__Active__c</columns>
        <columns>PIT_SCH__ExternalID__c</columns>
        <columns>PIT_SCH__Company__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>PIT_SCH__Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PIT_SCH__Market__c</field>
            <operation>equals</operation>
            <value>UK</value>
        </filters>
        <label>All Product Line_UK</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Product_Line_Ukraine</fullName>
        <columns>NAME</columns>
        <columns>PIT_SCH__Active__c</columns>
        <columns>PIT_SCH__ExternalID__c</columns>
        <columns>PIT_SCH__Company__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>PIT_SCH__Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PIT_SCH__Market__c</field>
            <operation>equals</operation>
            <value>Ukraine</value>
        </filters>
        <label>All Product Line_Ukraine</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Product_Lines_AUD</fullName>
        <columns>NAME</columns>
        <columns>PIT_SCH__Active__c</columns>
        <columns>PIT_SCH__ExternalID__c</columns>
        <columns>PIT_SCH__Company__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>PIT_SCH__Market__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Product Lines</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PIT_SCH__All</fullName>
        <columns>NAME</columns>
        <columns>PIT_SCH__Active__c</columns>
        <columns>PIT_SCH__ExternalID__c</columns>
        <columns>PIT_SCH__Company__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>PIT_SCH__Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PIT_SCH__Market__c</field>
            <operation>equals</operation>
            <value>russia</value>
        </filters>
        <label>All Product Line_RU</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pitcher Product Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>